[package]
name = "solana-sniper-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.28", features = ["full"]}
anyhow = "1.0"
dotenv = "0.15.0"
solana-sdk = "2.3.1"
solana-client = "2.3.4"
base64 = "0.22.1"
bincode = "2.0.1"
